// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoicesField should match snapshot, with config messages 1`] = `
<div>
  <div
    data-mockid="FieldsetElement"
  >
    <div
      data-mockid="FieldsetLegendElement"
    />
    <div
      data-mockid="MessagesElement"
    />
  </div>
</div>
`;

exports[`ChoicesField should match snapshot, with error messages 1`] = `
<div>
  <div
    data-mockid="FieldsetElement"
  >
    <div
      data-mockid="FieldsetLegendElement"
    />
    <div
      data-mockid="MessagesElement"
    />
  </div>
</div>
`;

exports[`ChoicesField should match snapshot, without messages 1`] = `
<div>
  <div
    data-mockid="FieldsetElement"
  >
    <div
      data-mockid="FieldsetLegendElement"
    />
  </div>
</div>
`;
